--- a/podpisaka/podpisaka.csproj
+++ b/podpisaka/podpisaka.csproj
@@ -56,6 +56,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DIXU1.cs" />
     <Compile Include="dkxce.PKCS7Signer.cs" />
     <Compile Include="FileAss.cs" />
     <Compile Include="ListViewSorter.cs" />
