--- a/podpisaka/podpisaka.csproj
+++ b/podpisaka/podpisaka.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ShellLink.cs" />
+    <Compile Include="Significator.cs" />
     <Compile Include="XMLSaved.cs" />
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
